connection with client fixes

--- a/w_mainwindow.ui
+++ b/w_mainwindow.ui
@@ -1487,179 +1487,78 @@ zatrudnienia:</string>
      <string notr="true">background-color: rgb(66, 66, 66);
 color: rgb(255, 255, 255);</string>
     </property>
-    <widget class="QWidget" name="w_clinic_db_logs_container" native="true">
+    <widget class="Line" name="line_12">
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>0</y>
+       <y>30</y>
        <width>355</width>
-       <height>200</height>
+       <height>3</height>
       </rect>
      </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(66, 66, 66);
-color: rgb(255, 255, 255);</string>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
-     <widget class="QLabel" name="l_clinic_logs_tittle">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>355</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(221, 221, 221);</string>
-      </property>
-      <property name="text">
-       <string>Ostatnie logi z Clinic Database</string>
-      </property>
-      <property name="indent">
-       <number>10</number>
-      </property>
-     </widget>
-     <widget class="Line" name="line_5">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>25</y>
-        <width>355</width>
-        <height>3</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-     <widget class="Line" name="line_6">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>175</y>
-        <width>355</width>
-        <height>3</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="b_more_clinic_logs_button">
-      <property name="geometry">
-       <rect>
-        <x>265</x>
-        <y>177</y>
-        <width>80</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(66, 66, 66);
-color: rgb(221, 221, 221);</string>
-      </property>
-      <property name="text">
-       <string>Więcej...</string>
-      </property>
-      <property name="iconSize">
-       <size>
-        <width>0</width>
-        <height>0</height>
-       </size>
-      </property>
-     </widget>
     </widget>
-    <widget class="QWidget" name="w_auth_db_logs_container" native="true">
+    <widget class="QLabel" name="l_logs_tittle_2">
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>200</y>
+       <y>-1</y>
        <width>355</width>
-       <height>125</height>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(221, 221, 221);</string>
+     </property>
+     <property name="text">
+      <string>Ostatnie logi</string>
+     </property>
+     <property name="indent">
+      <number>10</number>
+     </property>
+    </widget>
+    <widget class="Line" name="line_13">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>300</y>
+       <width>355</width>
+       <height>3</height>
+      </rect>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="b_more_logs_button_2">
+     <property name="geometry">
+      <rect>
+       <x>275</x>
+       <y>301</y>
+       <width>80</width>
+       <height>20</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(66, 66, 66);
-color: rgb(255, 255, 255);</string>
-     </property>
-     <widget class="QLabel" name="l_auth_logs_tittle">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>355</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(221, 221, 221);</string>
-      </property>
-      <property name="text">
-       <string>Ostatnie logi z Authorization Database</string>
-      </property>
-      <property name="indent">
-       <number>10</number>
-      </property>
-     </widget>
-     <widget class="Line" name="line_7">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>25</y>
-        <width>355</width>
-        <height>3</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-     <widget class="Line" name="line_8">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>100</y>
-        <width>355</width>
-        <height>3</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="b_more_auth_logs_button">
-      <property name="geometry">
-       <rect>
-        <x>265</x>
-        <y>102</y>
-        <width>80</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(66, 66, 66);
 color: rgb(221, 221, 221);</string>
-      </property>
-      <property name="text">
-       <string>Więcej...</string>
-      </property>
-      <property name="iconSize">
-       <size>
-        <width>0</width>
-        <height>0</height>
-       </size>
-      </property>
-     </widget>
+     </property>
+     <property name="text">
+      <string>Więcej...</string>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
     </widget>
    </widget>
   </widget>
