--- a/w_mainwindow.ui
+++ b/w_mainwindow.ui
@@ -10,6 +10,18 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Clinic Client - User Panel</string>
   </property>
@@ -423,7 +435,7 @@ color: rgb(255, 255, 255);</string>
       <number>3</number>
      </property>
     </widget>
-    <widget class="QLabel" name="l_id_label_2">
+    <widget class="QLabel" name="l_role_label">
      <property name="geometry">
       <rect>
        <x>290</x>
@@ -451,7 +463,7 @@ color: rgb(255, 255, 255);</string>
       <number>3</number>
      </property>
     </widget>
-    <widget class="QLabel" name="l_email_label_2">
+    <widget class="QLabel" name="l_is_blocked_label">
      <property name="geometry">
       <rect>
        <x>290</x>
@@ -479,7 +491,7 @@ color: rgb(255, 255, 255);</string>
       <number>3</number>
      </property>
     </widget>
-    <widget class="QLabel" name="l_name_label_2">
+    <widget class="QLabel" name="l_create_date_label">
      <property name="geometry">
       <rect>
        <x>290</x>
@@ -507,7 +519,7 @@ color: rgb(255, 255, 255);</string>
       <number>3</number>
      </property>
     </widget>
-    <widget class="QLabel" name="l_name_2">
+    <widget class="QLabel" name="l_create_date">
      <property name="geometry">
       <rect>
        <x>375</x>
@@ -535,7 +547,7 @@ color: rgb(255, 255, 255);</string>
       <number>3</number>
      </property>
     </widget>
-    <widget class="QLabel" name="l_id_2">
+    <widget class="QLabel" name="l_role">
      <property name="geometry">
       <rect>
        <x>375</x>
@@ -563,7 +575,7 @@ color: rgb(255, 255, 255);</string>
       <number>3</number>
      </property>
     </widget>
-    <widget class="QLabel" name="l_verified_date_label_2">
+    <widget class="QLabel" name="l_is_logged_label">
      <property name="geometry">
       <rect>
        <x>290</x>
@@ -591,7 +603,7 @@ color: rgb(255, 255, 255);</string>
       <number>3</number>
      </property>
     </widget>
-    <widget class="QLabel" name="l_verified_date_2">
+    <widget class="QLabel" name="l_is_logged">
      <property name="geometry">
       <rect>
        <x>375</x>
@@ -619,7 +631,7 @@ color: rgb(255, 255, 255);</string>
       <number>3</number>
      </property>
     </widget>
-    <widget class="QLabel" name="l_verified_2">
+    <widget class="QLabel" name="l_blocked_date">
      <property name="geometry">
       <rect>
        <x>375</x>
@@ -647,7 +659,7 @@ color: rgb(255, 255, 255);</string>
       <number>3</number>
      </property>
     </widget>
-    <widget class="QLabel" name="l_verified_label_2">
+    <widget class="QLabel" name="l_blocked_date_label">
      <property name="geometry">
       <rect>
        <x>290</x>
@@ -675,7 +687,7 @@ color: rgb(255, 255, 255);</string>
       <number>3</number>
      </property>
     </widget>
-    <widget class="QLabel" name="l_email_2">
+    <widget class="QLabel" name="l_is_blocked">
      <property name="geometry">
       <rect>
        <x>375</x>
@@ -1558,6 +1570,56 @@ color: rgb(221, 221, 221);</string>
        <width>0</width>
        <height>0</height>
       </size>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="w_mask" native="true">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>800</width>
+      <height>600</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(255, 255, 255, 200);</string>
+    </property>
+    <widget class="QLabel" name="l_processingText">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>750</width>
+       <height>600</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string>Przetwarzanie...
+Proszę czekać...</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+     <property name="indent">
+      <number>0</number>
      </property>
     </widget>
    </widget>
